[project]
name = "socket"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "playwright>=1.57.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
    "websockets>=15.0.1",
]
